ref: added pag and filter and source infos
